@@ -1,8 +1,8 @@
 /****************************************************************************
  * sched/sched_setscheduler.c
  *
- *   Copyright (C) 2007, 2009 Gregory Nutt. All rights reserved.
- *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+ *   Copyright (C) 2007, 2009, 2012 Gregory Nutt. All rights reserved.
+ *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -182,7 +182,7 @@ int sched_setscheduler(pid_t pid, int policy,
     }
   else
     {
-      return SCHED_FIFO;
+      return OK;
     }
 }
 
